--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,19 @@
+/* Kalam */
+@import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
+
+.survey-form {
+  font-family: 'Kalam', cursive;
+}
+
+
+
 body {
-    color: red;
-    
+    width: 100%;
+    height: 100%vh;
+    margin: 0;
+    font-size: 16px;
+}
+
+* {
+    font-family: 'Kalam', cursive;
 }
