ready for final steps including radio questions html, css image, and general styling

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     height: 100%vh;
     margin: 0;
     font-size: 16px;
+    
 }
 
 * {
@@ -19,11 +20,70 @@ body {
 }
 
 #form-section {
-    background-color: green;
+    /* background-color: green; */
+    text-align: center;
+    margin: 1em auto;
+    background-color: gray;
+
+
 }
 
 h1, h2 {
     margin: 1em auto;
     text-align: center;
-    background-color: blue;
+    /* background-color: blue; */
 }
+
+form {
+    width: 60vh;
+    max-width: 700px;
+    min-width: 500px;
+    margin: 0 auto;
+    padding-bottom: 2em;
+}
+
+fieldset {
+    padding: 2rem 0;
+    border-bottom: 3px solid black;
+}
+
+label {
+    display: block;
+    margin: 0.5rem 0;
+}
+
+/* fieldset:last-of-type {
+    border-bottom: none;
+} */
+
+input,
+textarea,
+select {
+  margin: 10px 0 0 0;
+  width: 100%;
+  min-height: 2em;
+}
+
+input, textarea {
+
+  border: 1px solid #0a0a23;
+  color: #ffffff;
+}
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+/* input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
+  min-width: 300px;
+}
+ */
