--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,11 @@
   font-family: 'Kalam', cursive;
 }
 
-
-
 body {
     width: 100%;
     height: 100%vh;
     margin: 0;
     font-size: 16px;
-    
 }
 
 * {
@@ -21,12 +18,18 @@ body {
 
 #form-section {
     /* background-color: green; */
-    text-align: center;
+    /* text-align: center; */
     margin: 1em auto;
     background-color: gray;
 
 
 }
+
+legend {
+     background-color: green; 
+     /* text-align: center; */
+}
+
 
 h1, h2 {
     margin: 1em auto;
@@ -44,12 +47,15 @@ form {
 
 fieldset {
     padding: 2rem 0;
+    background-color: blue;
     border-bottom: 3px solid black;
 }
 
 label {
     display: block;
     margin: 0.5rem 0;
+    background-color: green;
+    /* align-items: left; */
 }
 
 /* fieldset:last-of-type {
@@ -70,20 +76,36 @@ input, textarea {
   color: #ffffff;
 }
 
+textarea {
+  
+}
+
 .inline {
   width: unset;
   margin: 0 0.5em 0 0;
   vertical-align: middle;
 }
 
-/* input[type="submit"] {
+.inline-checkbox {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+button[type="submit"] {
   display: block;
   width: 60%;
   margin: 1em auto;
   height: 2em;
   font-size: 1.1rem;
-  background-color: #3b3b4f;
+  background-color: red;
   border-color: white;
   min-width: 300px;
 }
- */
+/* 
+input[type="radio"] {
+  display: block;
+  text-align: left;
+  background-color: red;
+} */
+
