--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,10 @@
 }
 
 body {
+  background-color: gray;
+    margin: 0;
     width: 100%;
     height: 100%vh;
-    margin: 0;
     font-size: 16px;
 }
 
@@ -17,12 +18,15 @@ body {
 }
 
 #form-section {
-    /* background-color: green; */
-    /* text-align: center; */
-    margin: 1em auto;
-    background-color: gray;
-
-
+  width: 60vh;
+  max-width: 700px;
+  min-width: 500px;
+  margin: 0 auto;
+  padding-left: 2em;
+  padding-top: 2em;
+  padding-right: 2em;
+  padding-bottom: 2em;
+  background-color: aquamarine;
 }
 
 legend {
@@ -49,6 +53,7 @@ fieldset {
     padding: 2rem 0;
     background-color: blue;
     border-bottom: 3px solid black;
+    border: none;
 }
 
 label {
@@ -74,10 +79,6 @@ input, textarea {
 
   border: 1px solid #0a0a23;
   color: #ffffff;
-}
-
-textarea {
-  
 }
 
 .inline {
