--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,53 @@
 /* Kalam */
 @import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
 
-.survey-form {
+
+* {
   font-family: 'Kalam', cursive;
 }
 
+
+
+
+/* main {
+  background-image: url('./background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
+
 body {
+  background-image: url('./background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
   background-color: gray;
-    margin: 0;
-    width: 100%;
-    height: 100%vh;
-    font-size: 16px;
+  font-family: 'Kalam', cursive;
+  font-size: 16px;
 }
 
-* {
-    font-family: 'Kalam', cursive;
+
+h1, h2 {
+  margin: 1em auto;
+  text-align: center;
+  /* background-color: blue; */
 }
+
 
 #form-section {
-  width: 60vh;
-  max-width: 700px;
-  min-width: 500px;
+  height: 100%;
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
   margin: 0 auto;
   padding-left: 2em;
   padding-top: 2em;
   padding-right: 2em;
-  padding-bottom: 2em;
-  background-color: aquamarine;
-}
+  padding-bottom: 2em; 
+  background-color: rgba(13, 41, 81, 0.5);
+  
+  }
 
 legend {
      background-color: green; 
@@ -35,18 +55,12 @@ legend {
 }
 
 
-h1, h2 {
-    margin: 1em auto;
-    text-align: center;
-    /* background-color: blue; */
-}
-
 form {
-    width: 60vh;
-    max-width: 700px;
-    min-width: 500px;
-    margin: 0 auto;
-    padding-bottom: 2em;
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
 }
 
 fieldset {
@@ -76,7 +90,6 @@ select {
 }
 
 input, textarea {
-
   border: 1px solid #0a0a23;
   color: #ffffff;
 }
