--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@
 body {
   background-image: url('./background.jpg');
   background-repeat: no-repeat;
+  background-attachment: fixed;
+
   background-size: cover;
   width: 100%;
   height: 100vh;
