--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,11 @@
   font-family: 'Kalam', cursive;
 }
 
-
-
-
-/* main {
-  background-image: url('./background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
-
 body {
   background-image: url('./background.jpg');
+  position: relative;
   background-repeat: no-repeat;
   background-attachment: fixed;
-
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -28,6 +19,20 @@ body {
   font-family: 'Kalam', cursive;
   font-size: 16px;
 }
+
+/* body::before{ 
+  content: "";
+  position: relative;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(204, 201, 6, 1); /* Adjust the overlay color and opacity as desired 
+} 
+
+*/
+
 
 
 h1, h2 {
