--- a/styles.css
+++ b/styles.css
@@ -15,30 +15,22 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0;
-  background-color: gray;
   font-family: 'Kalam', cursive;
-  font-size: 16px;
+  font-size: 24px;
+  color: #f3f3f3;
+
 }
-
-/* body::before{ 
-  content: "";
-  position: relative;
-
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(204, 201, 6, 1); /* Adjust the overlay color and opacity as desired 
-} 
-
-*/
-
-
 
 h1, h2 {
   margin: 1em auto;
   text-align: center;
-  /* background-color: blue; */
+  /* color: #f3f3f3; */
+  ;
+}
+
+#name-legend {
+  padding-top: 40px;
+
 }
 
 
@@ -53,53 +45,48 @@ h1, h2 {
   padding-right: 2em;
   padding-bottom: 2em; 
   background-color: rgba(13, 41, 81, 0.5);
-  
   }
 
-legend {
-     background-color: green; 
-     /* text-align: center; */
-}
-
-
-form {
-  width: 60vw;
-  max-width: 500px;
-  min-width: 300px;
-  margin: 0 auto;
-  padding-bottom: 2em;
-}
-
-fieldset {
-    padding: 2rem 0;
+  
+  form {
+    width: 60vw;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0 auto;
+    padding-bottom: 2em;
+  }
+  
+  fieldset {
+    padding: 0;
+    /* padding: 1rem 0; */
     background-color: blue;
     border-bottom: 3px solid black;
     border: none;
-}
+  }
 
-label {
+  #title {
+    /* padding-top: ; */
+  }
+
+  label {
     display: block;
     margin: 0.5rem 0;
     background-color: green;
     /* align-items: left; */
-}
-
-/* fieldset:last-of-type {
-    border-bottom: none;
-} */
-
-input,
-textarea,
-select {
-  margin: 10px 0 0 0;
-  width: 100%;
-  min-height: 2em;
-}
-
-input, textarea {
-  border: 1px solid #0a0a23;
-  color: #ffffff;
-}
+  }
+  
+  input,
+  textarea,
+  select {
+    margin: 10px 0 0 0;
+    width: 100%;
+    min-height: 2em;
+  }
+  
+  input, textarea {
+    border: 1px solid #0a0a23;
+    color: #5a5858;
+  }
 
 .inline {
   width: unset;
@@ -123,10 +110,3 @@ button[type="submit"] {
   border-color: white;
   min-width: 300px;
 }
-/* 
-input[type="radio"] {
-  display: block;
-  text-align: left;
-  background-color: red;
-} */
-
