--- a/styles.css
+++ b/styles.css
@@ -16,23 +16,24 @@ body {
   height: 100vh;
   margin: 0;
   font-family: 'Kalam', cursive;
-  font-size: 24px;
+  font-size: 16px;
   color: #f3f3f3;
-
 }
 
 h1, h2 {
-  margin: 1em auto;
+  margin: .75em;
+  margin-bottom: -10px;
   text-align: center;
   /* color: #f3f3f3; */
   ;
 }
 
-#name-legend {
-  padding-top: 40px;
-
-}
-
+/* h2 {
+  margin-top: -12px;
+  margin: 0;
+  padding: 0px;
+  background-color: red;
+} */
 
 #form-section {
   height: 100%;
@@ -69,6 +70,7 @@ h1, h2 {
   }
 
   label {
+    font-size: 16px;
     display: block;
     margin: 0.5rem 0;
     background-color: green;
@@ -78,7 +80,7 @@ h1, h2 {
   input,
   textarea,
   select {
-    margin: 10px 0 0 0;
+    margin: 0 0 0 0;
     width: 100%;
     min-height: 2em;
   }
@@ -99,14 +101,37 @@ h1, h2 {
   margin: 0 0.5em 0 0;
   vertical-align: middle;
 }
+/* 
+hr {
+  background-color: black;
+} */
 
 button[type="submit"] {
   display: block;
-  width: 60%;
+  width: 100%;
   margin: 1em auto;
-  height: 2em;
+  height: 2em auto;
   font-size: 1.1rem;
-  background-color: red;
-  border-color: white;
+  border-color: #999;
+  color: white;
   min-width: 300px;
+
+  background-color: rgba(13, 41, 81, 0.5);
+  /* padding: 10px 20px; */
+  /* border: none; */
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+button {
+  /* Add your button styles here */
+
+}
+
+button:hover {
+  background-color: #999;
+  color: #fff;
+}
+
+p {
+  font-size: 16px;
 }
